2005-06-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/fr.po: Bugfix.

2005-06-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/fr.po: patch by John Mandereau.

	* site/news.ihtml (Preferably): annonce de la Traduction
	Francaise. (Thanks John!)
	announce windows version.

	* site/graphics/annotate-example-parts.svg: clean up text placement.

	* GNUmakefile: use --export-area-drawing iso. convert -crop.

	* site/install/devel.ihtml: add 2.5.31-2 for MOS-X

2005-06-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/thanks.html: add Tineke de Munnik, French translators.  

	* fr/index.html: add French translation.

	* site/about/thanks.html: add Jean-Charles Malahieude
	<lilyfan@wanadoo.fr>, Gauvain Pocentek <gauvainpocentek@yahoo.fr>
	and John Mandereau <john.mandereau@free.fr>.

	* scripts/format-page.py (LANGUAGES): add french
	(grab_gettext4): add comma's between languages. 

	* GNUmakefile: use foreach template for language targets.

2005-06-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (Module): announce .30

	* site/install/devel.ihtml: typo. Update to 30. FC4 now.

2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: change to versioned windows links.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/index.html: Add stable/development/old branch to
	headers.

2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: announce .29 for mac too.

	* GNUmakefile (upload): separate rule for permissions.
	
2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (Preferably): typo.

2005-06-04  Graham Percival  <gperlist@shaw.ca>

	* site/devel/participating/documentation-adding.html: update
	info about adding docs to make it as friendly as possible.

2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/index.html: zinsbouw.

2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/index.html: various fixes of the Dutch translation. 
