@@ -20,7 +20,7 @@
   <tr>
     <td>
       <p align="center">
-	<img src="@IMAGES@red-fedora.png">
+	<img src="@IMAGES@fedora-logo.png">
       </p>
     </td>
     <td>
@@ -42,6 +42,28 @@
     <td><a href="mailto:bug-lilypond@gnu.org">_("LilyPond development team")</a></td>
   </tr>
 
+  <tr>
+    <td>
+      <p align="center">
+	<img src="@IMAGES@tux-logo.png">/
+	<img src="@IMAGES@autopackage-logo.png">
+      </p>
+    </td>
+    <td>
+      Any
+    </td>
+    <td>-</td>
+    <td>
+      <strong>
+	_("<a href='%s'>Install</a> or <a href='%s'>upgrade</a>",
+	"http://lilypond.org/download/binaries/autopackage/lilypond-2.5.31.package",
+	"http://lilypond.org/download/binaries/autopackage/lilypond-2.5.31-upgrade.package")
+      </strong>
+    </td>
+    <td>2.5.31</td>
+    <td><a href="mailto:bug-lilypond@gnu.org">_("LilyPond development team")</a></td>
+  </tr>
+
   <tr bgcolor="#e8ffe8" >
     <td></td>
     <td colspan="6">
@@ -50,7 +72,7 @@
   </tr>
   
   <tr>
-    <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
+    <td><p align="center"><img src="@IMAGES@macosx-logo.png"></p></td>
     <td>
       MacOS X
     </td>
@@ -72,7 +94,7 @@
 
 
   <tr>
-    <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
+    <td><p align="center"><img src="@IMAGES@windows-logo.png"></p></td>
     <td>Microsoft Windows</td>
     <td>
       NT, 98, 2000, ME, XP
