@@ -98,13 +98,14 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 <h2>Notes</h2>
 
 <a name="redhat-notes"></a>
-
 <a name="mandrake-notes"></a>
 
 <h3>Mandrake 9.1</h3>
 
 Mandrake 9.1 users should install the <tt>libguile12-devel</tt> along
 with the <tt>libguile12</tt> package.
+
+
 
 <p>
   <i>
