@@ -1,5 +1,8 @@
 2005-06-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/install, site/images: Update/uniformise logos a bit.  Add
+	autopackage.
+
 	* po/fr.po: Bugfix.
 
 2005-06-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
